@@ -9,10 +9,10 @@
 #include "ralloc.h"
 #include "gen.h"
 #include "BuildCmd.h"
-#include "MySystem.h"
 #include "dbuf_string.h"
 #include "../SDCCutil.h"
 #include "../SDCCglobl.h"
+#include "../SDCCsystem.h"
 static char _defaultRules[] =
 {
 #include "peeph.rul"
